--- a/index.css
+++ b/index.css
@@ -1,14 +1,30 @@
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background-image: url('./images/5954088749.png');
+  /* background-color: rgb(92, 25, 25); */
+  font-family: 'Roboto', sans-serif;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  /* Full height */
+  background-size: cover;
+}
 /* Style the header with a grey background and some padding */
 .header {
   overflow: hidden;
-  background-color: #cacaca;
+  background-color: #0a2668;
   padding: 20px 10px;
 }
 
 /* Style the header links */
 .header a {
   float: left;
-  color: black;
+  color: white;
   text-align: center;
   padding: 12px;
   text-decoration: none;
@@ -21,11 +37,12 @@
 .header a.logo {
   font-size: 25px;
   font-weight: bold;
+  text-shadow: 2px 2px 4px #a7a7a7c5;
 }
 
 /* Change the background color on mouse-over */
 .header a:hover {
-  background-color: #ddd;
+  background-color: #4374e7;
   color: black;
 }
 
@@ -40,10 +57,7 @@
   float: right;
 }
 /* BODY */
-body {
-  background-color: rgb(226, 226, 226);
-  font-family: 'Roboto', sans-serif;
-}
+
 .avatar-image {
   padding-top: 25px;
 }
@@ -53,27 +67,34 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 23%;
+  box-shadow: 0 9px 6px rgba(245, 208, 46, 0.795);
 }
 .image-port {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 75%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .container {
-  background-color: beige;
+  background-color: #dc762e;
   box-sizing: border-box;
   margin-bottom: 15px;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 h2 {
   padding-left: 5px;
   padding-top: 5px;
   text-align: center;
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
 }
 .about-me {
   padding-top: 5px;
   padding-left: 5%;
   padding-bottom: 5%;
+  width: 80%;
 }
 .portfolio {
   text-align: center;
@@ -81,9 +102,11 @@ h2 {
 .container h3 {
   padding-top: 15px;
   text-align: center;
+  text-shadow: 2px 2px 4px #727272;
 }
 .portfolio-text {
   padding: 15px;
+  margin-bottom: 15px;
 }
 .github-icon {
   padding-bottom: 10px;
