--- a/index.css
+++ b/index.css
@@ -2,10 +2,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  background: linear-gradient(
-      rgba(32, 90, 145, 0.452),
-      rgba(32, 90, 145, 0.452)
-    ),
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url('./images/5954088749.png');
   /* background-color: rgb(92, 25, 25); */
   font-family: 'Roboto', sans-serif;
