--- a/index.css
+++ b/index.css
@@ -1,9 +1,12 @@
+html {
+  scroll-behavior: smooth;
+}
 body {
   width: 100%;
   height: 100%;
   margin: 0;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('./images/5954088749.png');
+    url('./images/background/1209641.png');
   /* background-color: rgb(92, 25, 25); */
   font-family: 'Roboto', sans-serif;
   background-repeat: no-repeat;
@@ -15,11 +18,14 @@ body {
   /* Full height */
   background-size: cover;
 }
+
 /* Style the header with a grey background and some padding */
 .header {
+  width: 100%;
   overflow: hidden;
-  background-color: #0a2668;
-  padding: 20px 10px;
+  background-color: #35517f;
+  padding: 10px 10px;
+  top: 0;
 }
 
 /* Style the header links */
@@ -38,28 +44,33 @@ body {
 .header a.logo {
   font-size: 25px;
   font-weight: bold;
-  text-shadow: 2px 2px 4px #a7a7a7c5;
+  text-shadow: 2px 2px 4px #7347a3;
 }
 
 /* Change the background color on mouse-over */
 .header a:hover {
-  background-color: #4374e7;
-  color: black;
+  background-color: #ac6267;
+  color: white;
 }
 
 /* Style the active/current link*/
 .header a.active {
-  background-color: dodgerblue;
+  background-color: 7347a3;
   color: white;
 }
 
 /* Float the link section to the right */
 .header-right {
   float: right;
+  margin-right: 20px;
 }
 /* BODY */
+main {
+  margin-top: 30px;
+}
 
 .avatar-image {
+  margin-top: 30px;
   padding-top: 25px;
 }
 .avatar {
@@ -68,7 +79,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 23%;
-  box-shadow: 0 9px 6px rgba(245, 208, 46, 0.795);
+  box-shadow: 0 9px 6px rgba(105, 20, 145, 0.795);
 }
 .image-port {
   display: block;
@@ -78,11 +89,36 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .container {
-  background-color: #dc762e;
+  background-color: #3a4259;
   box-sizing: border-box;
   margin-bottom: 15px;
   max-width: 1400px;
   margin: 0 auto;
+  color: rgb(211, 211, 211);
+}
+.projects a:link,
+a:visited {
+  background-color: #7f1cad;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+.projects a:hover, a:active {
+  background-color: rgb(0, 110, 255);
+}
+.contact a:link {
+  color: rgb(208, 226, 250);
+}
+.contact a:visited {
+  color: green;
+}
+.contact a:hover {
+  color: rgb(23, 128, 247);
+}
+.contact a:active {
+  color: blue;
 }
 h2 {
   padding-left: 5px;
@@ -97,23 +133,20 @@ h2 {
   padding-bottom: 5%;
   width: 80%;
 }
-.portfolio {
+.projects {
   text-align: center;
 }
 .container h3 {
   padding-top: 15px;
   text-align: center;
-  text-shadow: 2px 2px 4px #727272;
 }
-.portfolio-text {
+.projects-text {
   padding: 15px;
   margin-bottom: 15px;
 }
 .github-icon {
   padding-bottom: 10px;
 }
-
-/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
 @media screen and (max-width: 500px) {
   .header a {
     float: none;
