--- a/index.css
+++ b/index.css
@@ -18,12 +18,22 @@ body {
   /* Full height */
   background-size: cover;
 }
+h1 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 23%;
+  text-shadow: 0 2px 2px #6e2e2ee7;
+  text-align: center;
+  color: rgb(211, 211, 211);
+  font-family: 'Russo One', sans-serif;
+}
 
 /* Style the header with a grey background and some padding */
 .header {
   width: 100%;
   overflow: hidden;
-  background-color: #35517f;
+  background-color: #1b2b46;
   padding: 10px 10px;
   top: 0;
 }
@@ -39,8 +49,17 @@ body {
   line-height: 25px;
   border-radius: 4px;
 }
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 102px;
+}
+
 .header a.logo {
   font-size: 25px;
   font-weight: bold;
@@ -72,6 +91,21 @@ main {
 .avatar-image {
   margin-top: 30px;
   padding-top: 25px;
+  height: 600px;
+}
+
+.avatar-image h3 {
+  border-radius: 5px;
+  background-color: #6e323271;
+  padding: 20px;
+  padding-bottom: 20px;
+  max-width: 400px;
+  margin: auto;
+  margin-bottom: auto;
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  text-align: center;
+  color: rgb(211, 211, 211);
 }
 .avatar {
   border-radius: 50%;
@@ -88,13 +122,34 @@ main {
   width: 75%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.icons {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 15%;
+  padding: 25px 0;
+}
+.icons-node {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
+  padding: 25px 0;
+}
+.icons-react {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 5%;
+  padding: 25px 0;
+}
 .container {
-  background-color: #3a4259;
+  background-color: #dde0e9;
   box-sizing: border-box;
   margin-bottom: 15px;
-  max-width: 1400px;
+  max-width: 100%;
   margin: 0 auto;
-  color: rgb(211, 211, 211);
+  color: rgb(66, 66, 66);
 }
 .projects a:link,
 a:visited {
@@ -105,7 +160,8 @@ a:visited {
   text-decoration: none;
   display: inline-block;
 }
-.projects a:hover, a:active {
+.projects a:hover,
+a:active {
   background-color: rgb(0, 110, 255);
 }
 .contact a:link {
@@ -128,10 +184,10 @@ h2 {
   text-shadow: 2px 2px 4px #000000;
 }
 .about-me {
-  padding-top: 5px;
+  padding-top: 20px;
   padding-left: 5%;
   padding-bottom: 5%;
-  width: 80%;
+  height: 600px;
 }
 .projects {
   text-align: center;
