--- a/index.css
+++ b/index.css
@@ -22,7 +22,6 @@ h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 23%;
   text-shadow: 0 2px 2px #6e2e2ee7;
   text-align: center;
   color: rgb(211, 211, 211);
@@ -48,6 +47,9 @@ h1 {
   font-size: 18px;
   line-height: 25px;
   border-radius: 4px;
+}
+.header .hamburger {
+  display: none;
 }
 .sticky {
   position: fixed;
@@ -186,8 +188,9 @@ h2 {
 .about-me {
   padding-top: 20px;
   padding-left: 5%;
+  padding-right: 5%;
   padding-bottom: 5%;
-  height: 600px;
+  font-size: 25px;
 }
 .projects {
   text-align: center;
@@ -204,6 +207,11 @@ h2 {
   padding-bottom: 10px;
 }
 @media screen and (max-width: 500px) {
+  .header.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
   .header a {
     float: none;
     display: block;
