--- a/index.css
+++ b/index.css
@@ -153,7 +153,7 @@ main {
   margin: 0 auto;
   color: rgb(66, 66, 66);
 }
-.projects a:link,
+/* .projects a:link,
 a:visited {
   background-color: #7f1cad;
   color: white;
@@ -177,7 +177,7 @@ a:active {
 }
 .contact a:active {
   color: blue;
-}
+} */
 h2 {
   padding-left: 5px;
   padding-top: 5px;
