--- a/index.css
+++ b/index.css
@@ -145,6 +145,28 @@ main {
   width: 5%;
   padding: 25px 0;
 }
+.icons-contactme {
+  display: block;
+  text-align: center;
+}
+.icons-email {
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
+  padding: 25px;
+}
+.icons-github {
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
+  padding: 25px;
+}
+.icons-linkedin {
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
+  padding: 25px;
+}
 .container {
   background-color: #dde0e9;
   box-sizing: border-box;
